# ocr-rename

./: .gitignore  README.md  pyproject.toml
src/ocr_rename/: api_client.py  cli.py  config.py  pdf_utils.py  prompt.py  renamer.py  review_file.py
